--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.19",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "expo-router": "~3.5.18",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.2"
+    "expo-router": "~3.5.18",
+    "expo-status-bar": "~1.12.1",
+    "nativewind": "^4.0.36",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-web": "~0.19.10",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
